firmware/lib/control-table/tests/ui/region_repr_packed.stderr
error: Region derive forbids #[repr(packed)] (unaligned reads + offset_of are unsound)
 --> tests/ui/region_repr_packed.rs:9:11
  |
9 | #[repr(C, packed)]
  |           ^^^^^^
